--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cms-clean": "agility-next clean"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.4",
     "next": "^11.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
