updated example to have sync on

--- a/.env.local.example
+++ b/.env.local.example
@@ -7,4 +7,5 @@ AGILITY_SECURITY_KEY=
 # if you have multiple locales, comma separate them (e.g: en-us,fr-ca) without a space!
 AGILITY_LOCALES=en-us
 AGILITY_SITEMAP=website
+AGILITY_SYNC=true
 
